--- a/example-markup/layout.html
+++ b/example-markup/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Books</title>
+	<title>books</title>
 	<link href="../public/stylesheets/style.css" rel="stylesheet">
 </head>
 <body>
